--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.2.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
