Ignore sample data file

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,9 @@ todo.md
 client/dist/bundle.js
 client/dist/index.html
 
+# sample data
+database/sampleData.js
+
 # Not sure what this is right now
 client/.DS_Store
+
