--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "eslint": "^5.9.0",
